--- a/public/css/receipt.css
+++ b/public/css/receipt.css
@@ -60,9 +60,9 @@
 }
 
 .btn-back {
-    background-color: coral;
+    background-color: #ffd384;
 }
 
 .btn-print {
-    background-color: #4fa950;
+    background-color: #90be6d;
 }
