--- a/public/css/receipt.css
+++ b/public/css/receipt.css
@@ -60,9 +60,9 @@
 }
 
 .btn-back {
-    background-color: #ffd384;
+    background-color: #F3B949;
 }
 
 .btn-print {
-    background-color: #90be6d;
+    background-color: #97cf6e;
 }
